--- a/chart-container/package.json
+++ b/chart-container/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "apexcharts": "^3.41.0",
+    "chart.js": "^4.3.0",
     "core-js": "^3.29.0",
     "echarts": "^5.4.2",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
+    "vue-chartjs": "^5.2.0",
     "vue-echarts": "^6.6.0",
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-router": "^4.0.0",
+    "vue3-apexcharts": "^1.4.1",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
