--- a/charts-widget/package.json
+++ b/charts-widget/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "apexcharts": "^3.41.0",
     "core-js": "^3.29.0",
     "echarts": "^5.4.2",
     "pinia": "^2.1.4",
@@ -17,6 +18,7 @@
     "vue": "^3.2.0",
     "vue-echarts": "^6.6.0",
     "vue-router": "^4.0.0",
+    "vue3-apexcharts": "^1.4.1",
     "vuetify": "^3.0.0",
     "webfontloader": "^1.0.0"
   },
