--- a/chart-container/package.json
+++ b/chart-container/package.json
@@ -13,7 +13,9 @@
     "apexcharts": "^3.41.0",
     "chart.js": "^4.3.0",
     "core-js": "^3.29.0",
+    "dom-to-image": "^2.6.0",
     "echarts": "^5.4.2",
+    "file-saver": "^2.0.5",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
@@ -22,7 +24,7 @@
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-router": "^4.0.0",
     "vue3-apexcharts": "^1.4.1",
-    "vuetify": "^3.0.0",
+    "vuetify": "^3.3.4",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
