--- a/chart-container/package.json
+++ b/chart-container/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@vuepic/vue-datepicker": "^5.4.0",
     "apexcharts": "^3.41.0",
     "chart.js": "^4.3.0",
     "core-js": "^3.29.0",
     "dom-to-image": "^2.6.0",
     "echarts": "^5.4.2",
     "file-saver": "^2.0.5",
+    "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
