--- a/chart-container/package.json
+++ b/chart-container/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "@rollup/plugin-replace": "^5.0.2",
     "@vuepic/vue-datepicker": "^5.4.0",
     "apexcharts": "^3.41.0",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "core-js": "^3.29.0",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^16.3.1",
     "echarts": "^5.4.2",
     "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
+    "vite-plugin-env-compatible": "^1.1.1",
     "vue": "^3.2.0",
     "vue-chartjs": "^5.2.0",
     "vue-echarts": "^6.6.0",
