--- a/charts-widget/package.json
+++ b/charts-widget/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "apexcharts": "^3.41.0",
+    "chart.js": "^4.3.3",
     "core-js": "^3.29.0",
     "echarts": "^5.4.2",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
+    "vue-chartjs": "^5.2.0",
     "vue-echarts": "^6.6.0",
     "vue-router": "^4.0.0",
     "vue3-apexcharts": "^1.4.1",
