--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.41.1",
     "core-js": "^3.29.0",
     "echarts": "^5.4.2",
+    "mitt": "^3.0.1",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
