--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "apexcharts": "^3.41.1",
+    "chart.js": "^4.4.0",
     "core-js": "^3.29.0",
     "echarts": "^5.4.2",
     "mitt": "^3.0.1",
@@ -18,6 +19,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-apexcharts": "^1.6.2",
+    "vue-chartjs": "^5.2.0",
     "vue-echarts": "^6.6.0",
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-router": "^4.0.0",
