--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "apexcharts": "^3.41.1",
+    "axios": "^1.5.0",
     "chart.js": "^4.4.0",
     "core-js": "^3.29.0",
     "echarts": "^5.4.2",
