--- a/chart-container/package.json
+++ b/chart-container/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "echarts": "^5.4.2",
     "file-saver": "^2.0.5",
+    "mitt": "^3.0.1",
     "moment": "^2.29.4",
     "pinia": "^2.1.4",
     "roboto-fontface": "*",
