--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
   "name": "charts-widget-mfe",
   "version": "1.0.5",
-  "author": "mcarnecer@startechup.com"
+  "author": "mcarnecer@startechup.com",
+  "workspaces": [
+    "chart-container/*",
+    "charts-widget/*",
+    "dashboard/*"
+  ],
+  "scripts": {
+    "container": "npm --prefix chart-container run dev",
+    "widget": "npm --prefix charts-widget run dev",
+    "dashboard": "npm --prefix dashboard run dev",
+    "dev": "npm-run-all --parallel container widget dashboard"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
